--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "2.2.6",
     "moment": "2.26.0",
     "nouislider": "14.5.0",
+    "particles-bg": "^2.5.0",
     "react": "16.13.1",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
