--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
     "bootstrap": "^4.5.3",
     "classnames": "2.2.6",
+    "headroom": "^0.2.0",
+    "headroom.js": "^0.12.0",
     "moment": "2.26.0",
     "nouislider": "14.5.0",
     "particles-bg": "^2.5.0",
     "react": "16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-parallax": "^3.1.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
