--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-flippy": "^0.1.5",
     "react-parallax": "^3.1.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
