--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
     "react-flippy": "^0.1.5",
+    "react-infinite-calendar": "^2.3.1",
     "react-parallax": "^3.1.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
