added another file to delete

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 node_modules
-.prettierignore 
+.prettierignore
 .prettierrc.json
 gulpfile.js
-jsconfig.json 
-package.json 
-yarn.lock 
-.env 
+jsconfig.json
+package.json
+yarn.lock
+.env
 .env.local
 .vscode
-headroom 
-
+headroom
+.DS_Store
