--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "minify-sass": "node-sass src/assets/scss/paper-kit.scss src/assets/css/paper-kit.min.css --output-style compressed",
     "map-sass": "node-sass src/assets/scss/paper-kit.scss src/assets/css/paper-kit.css --source-map true",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public", 
+    "style":"yarn prettier --write src/"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -77,7 +78,7 @@
     "gulp-append-prepend": "1.0.8",
     "husky": "=4",
     "lint-staged": ">=10",
-    "prettier": "2.2.1"
+    "prettier": "^2.2.1"
   },
   "husky": {
     "hooks": {
